fix: added spacing

--- a/components/pages/LandingPage/LandingComponents/Benchmark/Benchmark.module.css
+++ b/components/pages/LandingPage/LandingComponents/Benchmark/Benchmark.module.css
@@ -16,6 +16,10 @@
   text-align: center;
 }
 
+.description__line {
+  margin-bottom: 4px;
+}
+
 .charts {
   margin-top: 24px;
 }
